[package]
name = "starpacks"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy_dir = "0.1.2"
is_elevated = "0.1.2"
serde = "1.0.171"
steam-workshop-api = "0.3.0"
symlink = "0.1.0"
toml = "0.7.6"

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
